# parser_bank

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  pyproject.toml
.claude/: settings.json
.claude/commands/: lint.md  pr.md
.claude/hooks/: format-python.sh
.claude/skills/: add-bank.md  new-feature.md  parse-test.md  test.md
.claude/skills/add-bank/: SKILL.md
.claude/skills/lint/: SKILL.md
.claude/skills/new-feature/: SKILL.md
.claude/skills/parse-test/: SKILL.md
.claude/skills/pr/: SKILL.md
.claude/skills/test/: SKILL.md
.github/workflows/: cd.yml  ci.yml
src/adapters/input/bank_identifiers/: keyword_identifier.py
src/adapters/input/bank_parsers/: banorte_parser.py  bbva_parser.py  hsbc_ebcdic.py  hsbc_parser.py  santander_parser.py  scotiabank_parser.py  vantagebank_parser.py
src/adapters/input/text_extractors/: ocr_extractor.py  pdfplumber_extractor.py
src/adapters/output/loggers/: console_logger.py
src/adapters/output/writers/: excel_writer.py
src/cli/: main.py
src/domain/: exceptions.py
src/domain/models/: __init__.py  info_cuenta.py  movimiento.py  page_text.py  resultado_parseo.py  resumen.py  word_info.py
src/domain/ports/: __init__.py  bank_identifier.py  bank_parser.py  output_writer.py  process_logger.py  text_extractor.py
src/domain/services/: statement_processor.py
src/domain/shared/: __init__.py  date_parser.py  money.py  month_map.py  text_cleaner.py
src/infrastructure/: registry.py
tests/unit/adapters/: test_banorte_parser.py  test_bbva_parser.py  test_hsbc_parser.py  test_santander_parser.py  test_scotiabank_parser.py  test_vantagebank_parser.py
tests/unit/domain/: test_date_parser.py  test_models.py  test_money.py  test_month_map.py  test_statement_processor_hybrid.py
